--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ sourceCompatibility = '17'
 repositories {
     mavenLocal()
     mavenCentral()
+
+    maven {
+        url "https://oss.sonatype.org/content/repositories/snapshots"        
+    }
 }
 
 configurations.all {
