--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,12 @@ repositories {
     maven {
         url "https://oss.sonatype.org/content/repositories/snapshots"        
     }
+    maven {
+        url "https://build.shibboleth.net/maven/snapshots"
+    }
+    maven {
+        url "https://build.shibboleth.net/maven/thirdparty-snapshots"
+    }
 }
 
 configurations.all {
